--- a/index.html
+++ b/index.html
@@ -3,77 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Currency Exchange App</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="#">
+
 </head>
 <body>
-    <div class="weather-app">
-        <div class="weather-header">
-            <h1 id="city">City</h1>
-            <p id="date-time">Date and Time</p>
-        </div>
-        <div class="weather-icon">
-            <img id="weather-icon" src="./8504201 (1).png" alt="Weather Icon">
-        </div>
-        <div class="temperature">
-            <h2 id="temperature">0°C</h2>
-            <p id="greeting">Greeting</p>
-        </div>
-        <div class="weather-details">
-            <div class="detail-item">
-                <p>Sunrise</p>
-                <p id="sunrise">0:00</p>
+    <div class="container">
+        <h1>Currency Exchange</h1>
+        <div class="exchange-box">
+            <div class="exchange-item">
+                <input type="number" id="amount" placeholder="Amount" />
+                <select id="from-currency">
+                </select>
             </div>
-            <div class="detail-item">
-                <p>Wind</p>
-                <p id="wind">0 m/s</p>
+            <div class="exchange-icon">⇄</div>
+            <div class="exchange-item">
+                <input type="text" id="result" placeholder="Result" readonly />
+                <select id="to-currency">
+                </select>
             </div>
-            <div class="detail-item">
-                <p>Humidity</p>
-                <p id="humidity">0%</p>
-                
-                </div>
-            </div>
+            <button class="exchange-button" onclick="convertCurrency()">Convert</button>
         </div>
-
-
+    </div>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-    const apiKey = '7c090b735cacb8eed3c8333938364ad6';
-    const city = 'Faisalabad';
+        const API_KEY = 'fa3daa5b1a1c7b5880fe5479'; // Replace with your ExchangeRate-API key
+const API_URL = 'https://api.allorigins.win/raw?url=https://v6.exchangerate-api.com/v6/fa3daa5b1a1c7b5880fe5479/latest/USD';
+;
 
-    fetch(`https://api.openweathermap.org/data/2.5/weather?q=faisalabad&appid=7c090b735cacb8eed3c8333938364ad6`)
+document.addEventListener('DOMContentLoaded', () => {
+    const fromCurrency = document.getElementById('from-currency');
+    const toCurrency = document.getElementById('to-currency');
+
+    fetch(API_URL)
         .then(response => response.json())
         .then(data => {
-            updateWeather(data);
+            const currencies = Object.keys(data.conversion_rates);
+            currencies.forEach(currency => {
+                const optionFrom = document.createElement('option');
+                optionFrom.value = currency;
+                optionFrom.text = currency;
+                fromCurrency.add(optionFrom);
+
+                const optionTo = document.createElement('option');
+                optionTo.value = currency;
+                optionTo.text = currency;
+                toCurrency.add(optionTo);
+            });
         })
         .catch(error => {
-            console.error('Error fetching the weather data:', error);
+            console.error('Error fetching data:', error);
         });
-
-    function updateWeather(data) {
-        document.getElementById('city').textContent = data.name;
-        document.getElementById('date-time').textContent = new Date().toLocaleString();
-        const temperatureCelsius = (data.main.temp-273.15).toFixed(0);
-        document.getElementById('temperature').textContent = `${temperatureCelsius} °C`;
-        document.getElementById('greeting').textContent = getGreeting();
-
-        document.getElementById('sunrise').textContent = new Date(data.sys.sunrise * 1000).toLocaleTimeString();
-        document.getElementById('wind').textContent =` ${data.wind.speed} m/s`;
-        document.getElementById('humidity').textContent =` ${data.main.humidity} % `;
-    }
-
-    function getGreeting() {
-        const hour = new Date().getHours();
-        if (hour < 12) {
-            return 'GOOD MORNING Infal';
-        } else if (hour < 18) {
-            return 'GOOD AFTERNOON Infal';
-        } else {
-            return 'GOOD EVENING Infal';
-        }
-    }
 });
+
+function convertCurrency() {
+    const amount = document.getElementById('amount').value;
+    const fromCurrency = document.getElementById('from-currency').value;
+    const toCurrency = document.getElementById('to-currency').value;
+    const result = document.getElementById('result');
+
+    fetch('https://api.allorigins.win/raw?url=https://v6.exchangerate-api.com/v6/fa3daa5b1a1c7b5880fe5479/latest/USD'
+    )
+        .then(response => response.json())
+        .then(data => {
+            const rate = data.conversion_rates[toCurrency];
+            result.value = (amount * rate).toFixed(2);
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+        });
+}
     </script>
 </body>
 </html>
